--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   path: ^1.8.3
   dotted_border: ^2.0.0+3
   flutter_svg: ^2.0.7
+  connectivity_plus: ^4.0.1
+  internet_connection_checker: ^1.0.0+1
+  app_settings: ^4.2.0
 
 dev_dependencies:
   flutter_test:
