--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,12 @@ dependencies:
   connectivity_plus: ^4.0.1
   internet_connection_checker: ^1.0.0+1
   app_settings: ^4.2.0
+  permission_handler: ^10.3.0
+  gallery_saver: ^2.3.2
+  pdf: ^3.10.4
+  printing: ^5.11.0
+  open_file: ^3.3.2
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
@@ -106,17 +112,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Kanit
+      fonts:
+        - asset: fonts/Kanit-Thin.ttf
+        - asset: fonts/Kanit-ExtraLight.ttf
+          # style: Black
+    # - family: Trajan Pro
+    #   fonts:
+    #     - asset: fonts/TrajanPro.ttf
+    #     - asset: fonts/TrajanPro_Bold.ttf
+    #       weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
