--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   printing: ^5.11.0
   open_file: ^3.3.2
   http: ^0.13.6
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
